--- a/style.css
+++ b/style.css
@@ -1,10 +1,62 @@
 * {
-    color: rgb(0, 0, 212); /*a comment */
-    margin: 15px;
+    color: rgb(0, 0, 0); /*a comment */
+    margin: 10px;
     font: 14px Tahoma;
-    background-color: rgb(252, 189, 0);
+    background-color: rgb(242, 192, 8);
 }
 
-button{
-    color: black;
+p {
+    color:rgb(44, 139, 21);
 }
+
+button.subpage {
+    color: rgb(255, 255, 255);
+}
+
+.box {
+    display: flex;
+
+}
+
+.box div {
+    border: solid 1px black;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-rows: 100px 100px;
+    grid-template-columns: 100px 100px 100px;
+    grid-gap: 1px;
+}
+
+.grid-item1 {
+    background: lightgray;
+    border: solid 1px black;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.grid-item2 {
+    background: lightgray;
+    border: solid 1px black;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+.grid-item3 {
+    background: lightgray;
+    border: solid 1px black;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+h1{ color: #333; }
+button {
+    border: 2px solid #AAA;
+    background-color: #071ac7;
+}
+
+
